[tool.poetry]
name = "python-substack"
version = "0.0.4"
description = "A Python wrapper around the Substack API."
authors = ["Paolo Mazza <mazzapaolo2019@gmail.com>"]
license = "MIT"
packages = [
    { include = "substack" }
]

readme = "README.md"

repository = "https://github.com/hogier/python-substack"
homepage = "https://github.com/hogier/python-substack"

keywords = ["substack"]

[tool.poetry.dependencies]
python = "^3.8"

requests = "^2.28.1"
python-dotenv = "^0.20.0"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"